# overcast

./: Cargo.toml  Done.md  README.md  Todo.md
.github/workflows/: release.yaml
assets/models/: voxcar-1.gltf  voxcar-2.gltf  voxcar-3.gltf  voxcar-4.gltf  voxcar-5.gltf
assets/saves/: world.json
assets/textures/: intersection.png~  one_lane.png~  two_lanes.png~
documentation/: Done.md  Todo.md  documentation.docx
saves/: world.json
src/: brush.rs  building.rs  building_tool.rs  camera.rs  eraser_tool.rs  graph.rs  graph_events.rs  grid.rs  grid_area.rs  grid_cell.rs  intersection.rs  main.rs  orientation.rs  road.rs  road_events.rs  road_graph.rs  road_graph_events.rs  road_segment.rs  road_tool.rs  schedule.rs  tool.rs  toolbar.rs  vehicle.rs  weather.rs
src/assets/: mod.rs
src/graph/: mod.rs  road_graph.rs  road_graph_events.rs
src/graphics/: camera.rs  mod.rs  models.rs  weather.rs
src/grid/: grid.rs  grid_area.rs  grid_cell.rs  mod.rs  orientation.rs
src/save/: fallback.rs  mod.rs  save.rs  save_events.rs  save_to_disk.rs
src/tools/: building_tool.rs  eraser_tool.rs  mod.rs  road_events.rs  road_tool.rs  toolbar.rs  toolbar_events.rs
src/types/: building.rs  intersection.rs  mod.rs  road_segment.rs  vehicle.rs
src/ui/: egui.rs
