[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking", "jpeg"] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
rand = "0.8.4"
if_chain = "1.0.2"
bevy_mod_raycast = "0.18.0"
serde_json = "1.0.132"
serde = "1.0.214"
bevy_egui = "0.30"
catppuccin-egui = { version = "5.3.0", default-features = false, features = [
    "egui29",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
